# rust-examples

./: README.md
allocator/: Cargo.toml
allocator/examples/: jemallocator.rs
allocator/src/: main.rs  main2.rs
async-await/: Cargo.toml
async-await/examples/: mutex.rs  test.rs
async-await/src/: main.rs
box-slice/: Cargo.toml
box-slice/examples/: free-double.rs  memory-leak-single.rs  memory-leak-test.rs  memory-leak.rs
bzlib-sys/: Cargo.toml
bzlib-sys/src/: bindings.rs
concurrency/: Cargo.toml
concurrency/examples/: condvar.rs  lock.rs  lock2.rs  lock3.rs
concurrency/src/: channel.rs  channel2.rs  main.rs
ffi-hello/: Cargo.toml
ffi-hello/src/: lib.rs
first-lesson/: .gitignore  Cargo.toml
first-lesson/src/: lib.rs
first-lesson/src/first/: actor.rs  encode.rs  fibonacci.rs  mod.rs  persistent.rs  strtok.rs  ticket.rs
hash-map/: Cargo.toml
hash-map/examples/: test.rs  test2.rs
hash-map/src/: main.rs
httpie/: Cargo.toml
httpie/src/: main.rs
iterator-ext/: Cargo.toml
kv-server-1/: Cargo.toml
kv-server-1/examples/: client.rs  server.rs
kv-server-2/: Cargo.toml
kv-server-2/examples/: client.rs  dummy_server.rs  server.rs
kv-server-2/src/pb/: abi.rs  mod.rs
kv-server-2/src/service/: command_service.rs  mod.rs
kv-server-2/src/storage/: mod.rs
kv-server-3/: Cargo.toml
kv-server-3/examples/: client.rs  dummy_server.rs  server.rs  server_with_rocks.rs  server_with_sled.rs
kv-server-3/src/service/: mod.rs
kv-server-3/src/storage/: memory.rs  mod.rs  rocks_db.rs  sled_db.rs
kv-server-4/: Cargo.toml  abi.proto
kv-server-4/examples/: client.rs  client_with_codec.rs  client_with_custom_frame.rs  dummy_server.rs  server.rs  server_with_codec.rs  server_with_custom_frame.rs  server_with_rocks.rs  server_with_sled.rs
kv-server-4/src/: lib.rs
kv-server-4/src/network/: frame.rs
kv-server-4/src/pb/: mod.rs
kv-server-4/src/service/: command_service.rs
kv-server-4/src/storage/: mod.rs
kv-server-5/: Cargo.toml
kv-server-5/examples/: client.rs  client_with_codec.rs  client_with_custom_frame.rs  dummy_server.rs  server.rs  server_with_codec.rs  server_with_custom_frame.rs  server_with_rocks.rs  server_with_sled.rs
kv-server-5/fixtures/: ca.cert  ca.key  client.cert  server.key
kv-server-5/src/: error.rs
kv-server-5/src/network/: mod.rs
kv-server-5/src/storage/: sled_db.rs
kv-server-6/: Cargo.toml
kv-server-6/examples/: client.rs  client_with_codec.rs  client_with_custom_frame.rs  dummy_server.rs  server.rs  server_with_codec.rs  server_with_custom_frame.rs  server_with_rocks.rs  server_with_sled.rs
kv-server-6/fixtures/: client.key  server.cert
kv-server-6/src/network/: frame.rs
kv-server-7/: Cargo.toml  abi.proto
kv-server-7/examples/: client.rs  client_with_codec.rs  client_with_custom_frame.rs  dummy_server.rs  server.rs  server_with_codec.rs  server_with_custom_frame.rs  server_with_rocks.rs  server_with_sled.rs
kv-server-7/src/: error.rs
kv-server-7/src/network/: mod.rs  stream.rs  stream_result.rs  tls.rs
kv-server-7/src/pb/: abi.rs  mod.rs
kv-server-7/src/service/: command_service.rs  mod.rs
kv-server-video/: .gitignore  .pre-commit-config.yml  Cargo.toml  README.md  abi.proto  deny.toml
kv-server-video/.github/workflows/: build.yml
kv-server-video/examples/: client.rs  server.rs
kv-server-video/src/: lib.rs  main.rs  noise_codec.rs
kv-server-video/src/pb/: abi.rs  mod.rs
macros/: Cargo.toml
macros/examples/: command.rs  generate.rs  query.rs
macros/src/: builder.rs  builder_with_attr.rs  lib.rs  raw_builder.rs  raw_generate.rs
macros/templates/: generate.j2
my_string/: Cargo.toml
my_string/src/: main.rs
p2p/: Cargo.toml
pow/: Cargo.toml  abi.proto
pow/examples/: client.rs  server.rs
pow/src/: lib.rs  pow.rs
pow/src/pb/: abi.rs
queryer/: Cargo.toml
queryer/examples/: covid.rs  dialect.rs
queryer/src/: convert.rs  dialect.rs  lib.rs
rgrep/: Cargo.toml  论语.txt  论语2.txt
rgrep/src/: args.rs  lib.rs  main.rs  read.rs  search.rs
scrape_url/: Cargo.toml
scrape_url/src/: main.rs
thumbor/: Cargo.toml  abi.proto
thumbor/src/: main.rs
thumbor/src/engine/: photon.rs
thumbor/src/pb/: mod.rs
unsafe-code/src/: main.rs
