[package]
name = "async-await"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["codec"] }
rayon = "1"
futures = "0"
anyhow = "1"
blake3 = "1"
