[package]
name = "kv-server-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-prost = "0.4"
prost = "0.12"
dashmap = "5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
bytes = "1"

[build-dependencies]
prost-build = "0.12" # 编译 protobuf
