[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net", "macros", "rt-multi-thread"] }
prost = "0.12"
# dashmap = "5"
sled = "0.34"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1"

[build-dependencies]
prost-build = "0.12"
