[package]
name = "pow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12"
tonic = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
futures = "0.3"
tokio-stream = "0.1"
anyhow = "1"
blake3 = "1"
hex = "0.4"
rayon = "1"

[build-dependencies]
tonic-build = "0.10"
